--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.37.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "simplebar-react": "^2.4.3",
     "web-vitals": "^3.0.3"
   },
